# weechat-api.rs

./: Cargo.toml  LICENSE  README.md
src/: api.rs
src/api/: client.rs  objects.rs
src/api/client/: http.rs  test.rs  websocket.rs
src/api/client/http/: test.rs
src/api/client/websocket/: request.rs  test.rs
src/api/client/websocket/request/: test.rs
src/api/objects/: buffer.rs  handshake.rs  hotlist.rs  input.rs  lines.rs  nicks.rs  sync.rs  version.rs
src/api/objects/buffer/: test.rs
src/api/objects/handshake/: test.rs
src/api/objects/hotlist/: test.rs
src/api/objects/input/: test.rs
src/api/objects/lines/: test.rs
src/api/objects/nicks/: test.rs
src/api/objects/sync/: test.rs
src/api/objects/version/: test.rs
