[package]
name = "weechat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }

[dev-dependencies]
reqwest_mock = "0.7.0"
serde_json = "1.0.133"
time = { version = "0.3.36", features = ["parsing"] }
tokio = { version = "1.41.1", features = ["rt", "macros"] }
